[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rust-ue-tools"
version = "0.1.0"
description = "Rust UE Tools - Native Rust library for Unreal Engine PAK and UTOC file operations"
authors = [{name = "Rounak", email = "rounak@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["unreal-engine", "pak", "utoc", "unrealpak"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Rounak77382/rust-ue-tools"
Repository = "https://github.com/Rounak77382/rust-ue-tools"

[tool.maturin]
module-name = "rust_ue_tools._core"
manifest-path = "Cargo.toml"
features = ["pyo3"]
